--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">扫云</string>
     <string name="switch_camera">切换镜头</string>
     <string name="flash">闪光灯</string>
+    <string name="info_scan">对准目标，自动扫描</string>
 </resources>
