--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="switch_camera">切换镜头</string>
     <string name="flash">闪光灯</string>
     <string name="info_scan">对准目标，自动扫描</string>
+    <string name="need_permission">APP需要获得权限才能使用。</string>
+    <string name="hint">提示</string>
 </resources>
